--- a/src/styles/Forms.css
+++ b/src/styles/Forms.css
@@ -1,10 +1,40 @@
 .cv-forms {
     display: grid;
     padding: 24px;
+    background-color: var(--cerulean)
 }
 
-.general-info > form,
-.education-info > form,
-.practical-info > form{
+input[type="date"] {
+    margin-bottom: 12px;
+}
+
+input:focus {
+    outline: none;
+}
+
+input {
+    border-radius: 12px;
+    border: 1px solid lightgrey;
+    padding: 6px;
+    font-weight: 500;
+    font-size: 14px;
+}
+
+.cv-forms form {
     display: grid;
+    align-self: center;
+    width: 100%;
+}
+
+.cv-forms label {
+    font-weight: 600;
+    color: var(--platnium);
+    text-align: center;
+    margin: 10px 0px;
+}
+
+.general-info,
+.education-info,
+.practical-info {
+    display: flex;
 }
