--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,12 +1,15 @@
 :root {
     --cerulean: #3A7CA5;
     --platnium: #D9DCD6;
+    --indigo: #16425B;
+    --skyblue: #81C3D7;
     font-family: 'Merriweather', serif;
 }
 
 body {
     margin: 0;
     min-height: 100vh;
+    background-color: var(--platnium)
 }
 
 #root {
@@ -15,7 +18,7 @@ body {
 
 .main {
     display: grid;
-    grid-template: 1fr / 1fr 3fr;
+    grid-template: 1fr / 1fr 400px 3fr 1fr;
 
     min-height: inherit;
 }
