--- a/src/styles/Forms.css
+++ b/src/styles/Forms.css
@@ -1,5 +1,6 @@
 .cv-forms {
     display: grid;
+    grid-column: 2 / 3;
     padding: 24px;
     background-color: var(--cerulean)
 }
@@ -8,16 +9,22 @@ input[type="date"] {
     margin-bottom: 12px;
 }
 
-input:focus {
+input:focus,
+textarea:focus {
     outline: none;
 }
 
-input {
+input, 
+textarea {
     border-radius: 12px;
     border: 1px solid lightgrey;
     padding: 6px;
     font-weight: 500;
     font-size: 14px;
+}
+
+textarea {
+    resize: none;
 }
 
 .cv-forms form {
