--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,15 +1,18 @@
 :root {
-    --cerulean: #3A7CA5;
-    --platnium: #D9DCD6;
-    --indigo: #16425B;
-    --skyblue: #81C3D7;
+    --tea: #C7F0BD;
+    --powder: #FFFCF9;
+    --mint: #D7FFF1;
+    --lgreen: #AAFCB8;
+    --mgreen: #8CD790;
+    --cambridge: #77AF9C;
+    --castleton: #285943;
     font-family: 'Merriweather', serif;
 }
 
 body {
     margin: 0;
     min-height: 100vh;
-    background-color: var(--platnium)
+    background-color: var(--tea);
 }
 
 #root {
