--- a/src/styles/CVApp.css
+++ b/src/styles/CVApp.css
@@ -13,7 +13,7 @@
 .cv-container {
     display: grid;
     grid-template: 1fr 0.1fr 2fr 0.1fr 3fr 3fr / 1fr;
-    min-height: 88%;
+    max-height: 90%;
     width: min(80%, 700px);
     border-radius: 60px;
     padding: 24px;
@@ -22,11 +22,39 @@
 
 #cv-general {
     display: grid;
+    grid-template: 3fr 1fr 1fr / 1fr;
+}
+
+input#cv-name,
+input#cv-email,
+input#cv-phone {
+    border: none;
+}
+
+input#cv-email,
+input#cv-phone {
+    padding-left: 12px;
+}
+
+input#cv-name {
+    padding: 0px 0px 8px 12px;
+    font-size: 32px;
+    font-weight: 600;
+    grid-row: 1 / 2;
+    grid-column: 1 / -1;
+}
+
+input#cv-email {
+    grid-row: 2 / 3;
+}
+
+input#cv-phone {
+    grid-row: 3 / 4;
 }
 
 hr {
     width: 100%;
     height: 0%;
-    margin: 20px 0px;
+    margin: 10px 0px;
     border-bottom: 1px solid var(--powder);
 }
