--- a/src/styles/Forms.css
+++ b/src/styles/Forms.css
@@ -1,9 +1,16 @@
 .cv-forms {
     display: grid;
+    grid-template: 0.8fr 0.8fr 0.8fr 0.2fr / 1fr 1fr;
     grid-column: 2 / 3;
     padding: 24px;
     background-color: var(--cambridge);
     border-radius: 32px 0px 0px 32px;
+}
+
+.general-info,
+.education-info,
+.practical-info {
+    grid-column: 1 / -1;
 }
 
 .cv-forms input[type="date"] {
@@ -40,4 +47,18 @@
     color: var(--mint);
     text-align: center;
     margin: 10px 0px;
+}
+
+#submit-cv,
+#edit-cv {
+    justify-self: center;
+    align-self: center;
+
+    font-weight: 600;
+    color: var(--castleton);
+    background-color: var(--powder);
+    border-radius: 32px;
+    border: none;
+    width: 50%;
+    height: 60%;
 }
